[AI Fix] (a11y ADA compliance): set home post excerpt text color to #757575 for WCAG contrast

--- a/_sass/minima/_home.scss
+++ b/_sass/minima/_home.scss
@@ -101,7 +101,7 @@
 }
 
 .home_post_excerpt {
-    color:  #a4a4a4;
+    color:  #757575;
     font-size: 75%;
     // height: calc(100% - 183px - 10px - 50px);
 }
